k8s/lb/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-k8s
spec:
  type: LoadBalancer
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 80
     targetPort: 80
     nodePort: 31675
  selector:
    app: webserver-k8s
