k8s/lb/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np-k8s
spec:
  type: NodePort
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 80
     targetPort: 80
  selector:
    app: webserver-k8s
